ui/deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  geneweaver-ui-ingress
  annotations:
    # NOTE: When deploying a new instance, make sure to use the staging issuer first
    # so that you don't hit the rate limit for the production issuer. Once you have
    # confirmed that the staging issuer works, you can switch to the production issuer
    # by adding the "letsencrypt-prod" annotation in that environments overlay.
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.jax-cluster-prod-10.jax.org/oauth2/start?rd=https://$http_host$escaped_request_uri"
spec:
  ingressClassName: nginx
